# text-benchmarks

./: Makefile  README.markdown  text-benchmarks.cabal
python/: case_map.py  casemap.py  fileread.py  sort.py  strip_brackets.py  utils.py  word_count.py  wordcount.py
ruby/: casemap.rb  fileread.rb  strip_brackets.rb  utils.rb  word_count.rb  wordcount.rb
src/Data/Text/Benchmarks/: Main.hs  Micro.hs  Types.hs
src/Data/Text/Benchmarks/Micro/: Builder.hs  CaseMap.hs  Cut.hs  DecodeUtf8.hs  EncodeUtf8.hs  FileRead.hs  Sort.hs  StripBrackets.hs  Types.hs  Util.hs  WordCount.hs
src/Data/Text/Benchmarks/Programs/: CaseMap.hs  FileRead.hs  StripBrackets.hs  WordCount.hs
